add api of users/me/balances
